first the first part landing s

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Seba.Software</title>
+  <title>Pruebas y Automatización de Aplicaciones Móviles | Seba.Software</title>
+  <meta name="description" content="Ofrecemos pruebas y automatización de aplicaciones móviles de alta calidad, incluyendo un laboratorio con dispositivos reales para asegurar el rendimiento de tu aplicación.">
+  <meta name="keywords" content="pruebas de aplicaciones móviles, automatización de pruebas móviles, laboratorio de pruebas de aplicaciones móviles, pruebas en dispositivos reales, pruebas de rendimiento de aplicaciones móviles">
+  <meta name="author" content="Seba.Software">
+  <link rel="icon" type="image/svg" href="https://raw.githubusercontent.com/sebastianamarante/SA-Design/b5a88ab2ada1ff0324b83fd5064e25511382d2e2/assets/icons/batata.svg">
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/terminal.css">
   <link rel="stylesheet" href="styles/navbar.css">
@@ -13,42 +18,44 @@
   <link rel="stylesheet" href="styles/carrousel.css">
   <link rel="stylesheet" href="styles/route.css">
   <link rel="stylesheet" href="styles/iphone.css">
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+  <link rel="stylesheet" href="styles/footer.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
 
-<!-- Navbar -->
-<div class="navbar">
-  <div class="navbar-toggle"></div>
-  <ul class="navbar-links">
-    <li><a href="#inicio">Inicio</a></li>
-    <li><a href="#contacto">Contacto</a></li>
-    <li><a href="#repositorio">Repositorio</a></li>
-    <li><a href="#gobernanza">Gobernanza</a></li>
-    <li><a href="#tienda">Tienda</a></li>
-    <li><a href="#quienessomos">Quiénes somos</a></li>
-  </ul>
-</div>
+  <!-- Navbar -->
+  <div class="navbar">
+    <div class="navbar-toggle"></div>
+    <ul class="navbar-links">
+      <li><a href="#inicio">Inicio</a></li>
+      <li><a href="#contacto">Contacto</a></li>
+      <li><a href="#repositorio">Repositorio</a></li>
+      <li><a href="#quienessomos">Quiénes somos</a></li>
+    </ul>
+  </div>
 
 
-<div class="header">
-    <!--Content before waves-->
+  <div class="header">
     <div class="inner-header flex">
-      <!--Just the logo.. Don't mind this-->
       <div class="logo-container">
-        <img src="https://raw.githubusercontent.com/sebastianamarante/SA-Design/b5a88ab2ada1ff0324b83fd5064e25511382d2e2/assets/icons/batata.svg" class="logo">
+        <img
+          src="https://raw.githubusercontent.com/sebastianamarante/SA-Design/b5a88ab2ada1ff0324b83fd5064e25511382d2e2/assets/icons/batata.svg"
+          class="logo">
         <h1>Seba<span class="dot">dot</span>Software</h1>
       </div>
       <div class="lottie-container">
         <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-        <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_wloxwco0.json" background="transparent" speed="1" style="width: 500px; height: 500px; padding-left: 30vh;" loop autoplay></lottie-player>
+        <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_wloxwco0.json" background="transparent"
+          speed="1" style="width: 500px; height: 500px; padding-left: 30vh;" loop autoplay></lottie-player>
       </div>
     </div>
-  
+
     <!--Waves Container-->
     <div class="waves-container">
-      <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+      <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+        viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
         <defs>
           <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
         </defs>
@@ -63,13 +70,15 @@
     <!--Waves end-->
   </div>
   <!--Header ends-->
-  
+
   <!--Content starts-->
   <!-- Body -->
   <div class="terminal-section" id="inicio">
     <div class="container">
-      <h1>Optimiza tus aplicaciones <span class="highlight-section">móviles</span> con pruebas <span class="highlight-section">integrales</span></h1>
-      <p>Mejora la calidad y confiabilidad de tus aplicaciones móviles mediante pruebas exhaustivas y precisas en cada etapa de desarrollo.</p>
+      <h1>Optimiza tus aplicaciones <span class="highlight-section">móviles</span> con pruebas <span
+          class="highlight-section">integrales</span></h1>
+      <p>Mejora la calidad y confiabilidad de tus aplicaciones móviles mediante pruebas exhaustivas y precisas en cada
+        etapa de desarrollo.</p>
     </div>
     <div class="terminal">
       <div class="terminal-buttons">
@@ -102,7 +111,7 @@
       </div>
     </div>
   </section>
-  <section class="section-carrousel">
+  <section class="section-carrousel" id="quienessomos">
     <h2 style="margin-bottom: 10vh; color: whitesmoke;">Clientes que confían en nosotros</h2>
     <div class="carousel">
       <div class="carousel-item">
@@ -137,27 +146,27 @@
           <p>Conexión entre dispositivos móviles</p>
         </div>
       </div>
-      <div class="process-step">
+      <div class="process-step second-ps">
         <div class="card">
           <i class="fas fa-cloud card-icon"></i>
         </div>
-        <div class="arrow-container"></div>
+        <div class="arrow-container mobile-arrow-container"></div>
         <div class="description">
           <p>Dispositivos reales en la nube</p>
         </div>
       </div>
-      <div class="process-step">
+      <div class="process-step second-ps">
         <div class="card">
           <i class="fab fa-slack card-icon"></i>
         </div>
-        <div class="arrow-container" style="visibility: hidden;"></div>
+        <div class="arrow-container mobile-down-arrow" style="visibility: hidden;"></div>
         <div class="description">
           <p>Detección de últimas versiones</p>
         </div>
       </div>
     </div>
-    <div class="process-container" style="margin-top: 10vh;">
-      <div class="process-step">
+    <div class="process-container second-pc" style="margin-top: 10vh;">
+      <div class="process-step" id="step1">
         <div class="card">
           <i class="fas fa-check-circle card-icon"></i>
         </div>
@@ -166,7 +175,7 @@
           <p>Revisión y finalización del proceso</p>
         </div>
       </div>
-      <div class="process-step">
+      <div class="process-step" id="step2">
         <div class="card">
           <i class="fas fa-chart-line card-icon"></i>
         </div>
@@ -175,16 +184,16 @@
           <p>Análisis de resultados de pruebas</p>
         </div>
       </div>
-      <div class="process-step">
+      <div class="process-step" id="step3">
         <div class="card">
           <i class="fas fa-laptop-code card-icon"></i>
         </div>
         <div class="arrow-container-second"></div>
         <div class="description">
-          <p>Ejecución de pruebas en dispositivos reales en la nube</p>
+          <p>Ejecución de casos de prueba en RDC.</p>
         </div>
       </div>
-      <div class="process-step">
+      <div class="process-step" id="step4">
         <div class="card">
           <i class="fab fa-github card-icon"></i>
         </div>
@@ -195,12 +204,23 @@
       </div>
     </div>
   </section>
-  
-<footer>
-  <div class="flex">
-    <p>By.Sebastian Amarante | Improving your quality. </p>
-  </div>
-</footer>
+
+  <footer id="contacto">
+    <div class="footer-content">
+      <div class="logo-container">
+        <img class="footer-logo"
+          src="https://raw.githubusercontent.com/sebastianamarante/SA-Design/b5a88ab2ada1ff0324b83fd5064e25511382d2e2/assets/icons/batata.svg">
+      </div>
+      <div class="links-container">
+        <a href="https://github.com/sebastianamarante" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/sebastian-amarante/" target="_blank">LinkedIn</a>
+        <a href="mailto:i.sebastianamarante@gmail.com">Contacto</a>
+      </div>
+      <p class="footer-text">Descubre el futuro de pruebas móviles automatizadas.</p>
+    </div>
+  </footer>
+
+
   <!--Content ends-->
   <script src="js/navbar.js"></script>
   <script src="js/terminal.js"></script>
@@ -208,7 +228,7 @@
   <script src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
 
   <script>
-    $(document).ready(function(){
+    $(document).ready(function () {
       $('.carousel').slick({
         centerMode: true,
         centerPadding: '0',
@@ -223,5 +243,17 @@
       });
     });
   </script>
+  <script>
+    document.querySelector('.navbar-toggle').addEventListener('click', function () {
+      var navbar = document.querySelector('.navbar');
+      if (navbar.classList.contains('show')) {
+        navbar.classList.remove('show');
+      } else {
+        navbar.classList.add('show');
+      }
+    });
+  </script>
+
 </body>
+
 </html>
